@@ -27,6 +27,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - Fix a conflict in the code for herogeneous jobs and regular jobs.
   b - For alps jobs, use the login nodes evenly even when one goes down. TRQ-1317.
   b - Display the correct 'Assigned Cpu Count' in momctl output. TRQ-1307.
+  b - Make pbs_original_connect() no longer hang if the host is down. TRQ-1388.
 
 4.1.3
   b - fix a security loophole that potentially allowed an interactive job to run 
